<resources>
    <string name="app_name">BeHealthy</string>
    <string name="param_state">com.be_healthy_license_2014141300.be_healthy.CURRENT_STATE</string>
    <string name="param_language">com.be_healthy_license_2014141300.be_healthy.LANGUAGE</string>
    <string name="param_symptoms_for_search">com.be_healthy_license_2014141300.be_healthy.SYMPTOMS_FOR_SEARCH</string>
    <string name="param_disease_list">com.be_healthy_license_2014141300.be_healthy.POSSIBLE_DISEASE</string>
    <string name="param_disease">com.be_healthy_license_2014141300.be_healthy.DISEASE</string>
    <string name="param_saved_list">com.be_healthy_license_2014141300.be_healthy.SAVED_LIST</string>
    <string name="param_heartbeat">com.be_healthy_license_2014141300.be_healthy.HEARTBEAT</string>
    <string name="param_heartline">com.be_healthy_license_2014141300.be_healthy.HEART_LINE</string>
    <string name="param_id">com.be_healthy_license_2014141300.be_healthy.id</string>
    <string name="param_alarm">com.be_healthy_license_2014141300.be_healthy.ALARM</string>
    <string name="param_size">com.be_healthy_license_2014141300.be_healthy.TEXT_SIZE</string>
    <string name="param_age">com.be_healthy_license_2014141300.be_healthy.AGE</string>
    <string name="param_first_time">com.be_healthy_license_2014141300.be_healthy.FIRST</string>
    <string name="param_from_saved">com.be_healthy_license_2014141300.be_healthy.FROM_SAVED</string>
    <string name="preferences">com.be_healthy_license_2014141300.be_healthy.PREFERENCES</string>
    <string name="action_read_ready">com.be_healthy_license_2014141300.be_healthy.READ_READY</string>
    <string name="action_id_back">com.be_healthy_license_2014141300.be_healthy.BACK_ID</string>
    <string name="action_save">com.be_healthy_license_2014141300.be_healthy.SAVE</string>
    <string name="action_alarm_delete">com.be_healthy_license_2014141300.be_healthy.DELETE_ALARM</string>
    <string name="action_alarm_update">com.be_healthy_license_2014141300.be_healthy.UPDATE_ALARM</string>
    <string name="action_alarm_ready">com.be_healthy_license_2014141300.be_healthy.ALARM_READY</string>
    <string name="action_update_history">com.be_healthy_license_2014141300.be_healthy.UPDATE_HISTORY</string>
    <string name="action_finish">com.be_healthy_license_2014141300.be_healthy.FINISH</string>
    <string name="action_measure_done">com.be_healthy_license_2014141300.be_healthy.MEASURE_DONE</string>
    <string name="title_activity_option">OptionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_disease">DiseaseActivity</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string-array name="languages">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string-array name="keys">
        <item>ru</item>
        <item>en</item>
    </string-array>
    <string name="title_activity_heart_rate_measure">HeartRateMeasureActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">Главная страница</string>
    <string name="search">Поиск по симптомам</string>
    <string name="heart">Измерить пульс</string>
    <string name="eye">Тренировка для глаз</string>
    <string name="save">Сохраненные</string>
    <string name="alarm">Будильник</string>
    <string name="share">Поделиться</string>
    <string name="settings">Настройки</string>
    <string name="imb">Рассчитать ИМТ</string>
    <string name="delete">Удалить</string>
    <string name="accept">Принять</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="deleted">История удалена</string>
    <string name="measure">  Рассчитать  </string>
    <string name="weight">Вес(кг)</string>
    <string name="height">Рост(см)</string>
    <string name="symptoms">Симптомы</string>
    <string name="treatment">Лечение медпрепаратами</string>
    <string name="magic">Лечение народными средствами</string>
    <string name="symptom_hint">Введите симптом</string>
    <string name="spinner_hint">Выберите симптом</string>
    <string name="understand">Понятно</string>
    <string name="repeat">Повторять</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="add_alarm">Добавить будильник</string>
    <string name="switch_off">Выключить</string>
    <string name="sleep">Отложить</string>
    <string name="ringtone">Рингтон: </string>
    <string name="alarm_hint">Заметка...</string>
    <string name="language">Язык</string>
    <string name="text_size">Размер шрифта</string>
    <string name="age">Возраст</string>
    <string name="clear_history">Удалить историю измерения пульса</string>
    <string name="user_terms">Пользовательское \n соглашение</string>
    <string name="web">Перейти \nна сайт</string>
    <string name="sure_delete">Вы уверены, что хотите удалить историю измерения пульса?</string>
    <string name="shared_info">Ссылка скопирована в буфер обмена</string>
    <string name="no_flash_error">Ваше устройство не поддерживает данную функцию</string>
    <string name="empty_fields_error">Заполните все поля</string>
    <string name="saved_info">Сохранено</string>
    <string name="error_info">Произошла ошибка</string>
    <string name="error_age">Укажите свой возраст в настройках</string>
    <string name="error_negative_age">Неверно указан возраст</string>
    <string name="start_searching">Начать поиск заболеваний</string>
    <string name="add_to_favorite">Добавить в избранное</string>
    <string name="result_info">Ваш пульс: </string>
    <string name="too_high">Слишком высокий</string>
    <string name="too_low">Слишком низкий</string>
    <string name="norm">Все в порядке</string>
    <string name="instruction">Приложите палец к камере телефона и нажмите "старт".</string>
    <string name="instruction2">Плотно прижмите палец к камере. Старайтесь держать телефон ровно. Измерение займет несколько секунд.</string>
    <string name="instruction3">Для удаления какого-либо элемента в нашем приложении сдвиньте его влево</string>
    <string name="start">Старт</string>
    <string name="law">\u00A9 2017 Все права защищены. Нарушение авторских прав преследуется по закону.</string>
    <string name="warning">Все лечение имеет рекомендательный характер.</string>
    <string name="s_instruction">Для того что бы начать поиск варианта заболевания, нажмите + и добавьте весь перечень симптомов, которые вы у себя наблюдаете. (Желательно не менее 2-3 симптомов)</string>
    <string name="sun">ВС</string>
    <string name="mon">ПН</string>
    <string name="tue">ВТ</string>
    <string name="wen">СР</string>
    <string name="th">ЧТ</string>
    <string name="fr">ПТ</string>
    <string name="sat">СБ</string>
    <string-array name="fatty_diagnosis">
        <item>Анорексия</item>
        <item>Дефицит массы тела</item>
        <item>Норма</item>
        <item>Избыток веса</item>
        <item>Ожирение I степени</item>
        <item>Ожирение II степени</item>
        <item>Ожирение III степени</item>
        <item>Ожирение IV степени</item>
    </string-array>
    <string name="fat_grid">Выраженный дефицит массы: меньше 16,00\n Недостаточная масса тела: 16,00 - 18,49\n Норма: 18,50 - 24,99\n Избыточный вес: 25,00 - 29,99 \n Ожирение: более 30,00\n</string>
    <string-array name="risk_info">
        <item>высокий</item>
        <item>отсутствует</item>
        <item>отсутствует</item>
        <item>повышенный</item>
        <item>повышенный</item>
        <item>высокий</item>
        <item>очень высокий</item>
        <item>чрезвычайно высокий</item>
    </string-array>
    <string-array name="fat_advice">
        <item>Рекомендуется повышение веса.</item>
        <item>Всё в порядке, придерживайтесь правил здорового образа жизни и питания.</item>
        <item>Всё в порядке, придерживайтесь правил здорового образа жизни и питания.</item>
        <item>Рекомендуется снижение массы тела. В большинстве случаев для этого достаточно ограничить употребление высококалорийной пищи и больше двигаться.</item>
        <item>Рекомендуется снижение массы тела. В большинстве случаев для этого достаточно ограничить употребление высококалорийной пищи и больше двигаться.</item>
        <item>Настоятельно рекомендуется снижение массы тела.</item>
        <item>Настоятельно рекомендуется снижение массы тела.</item>
        <item>Необходимо немедленное снижение массы тела.</item>
    </string-array>
    <string-array name="young_min_range">
        <item>0</item>
        <item>17.6</item>
        <item>18.6</item>
        <item>23</item>
        <item>27.5</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
    </string-array>
    <string-array name="young_max_range">
        <item>17.5</item>
        <item>18.5</item>
        <item>22.9</item>
        <item>27.4</item>
        <item>29.9</item>
        <item>34.9</item>
        <item>39.9</item>
        <item>100000</item>
    </string-array>
    <string-array name="old_min_range">
        <item>0</item>
        <item>17.6</item>
        <item>18.6</item>
        <item>26</item>
        <item>28</item>
        <item>31</item>
        <item>36</item>
        <item>41</item>
    </string-array>
    <string-array name="old_max_range">
        <item>17.5</item>
        <item>18.5</item>
        <item>25.9</item>
        <item>27.9</item>
        <item>30.9</item>
        <item>35.9</item>
        <item>40.9</item>
        <item>100000</item>
    </string-array>
    <string-array name="advice_list">
        <item>Ешьте больше овощей и фруктов.</item>
        <item>Регулярные физические нагрузки помогут держаться в тонусе.</item>
        <item>Пейте больше воды.</item>
        <item>Спать лучше в полной темноте.</item>
        <item>Давайте глазам отдых каждые 10–15 минут.</item>
        <item>Старайтесь проводить больше времени на солнце.</item>
        <item>Принимайте контрастный душ по утрам.</item>
        <item>Следите за осанкой.</item>
        <item>Не употребляйте слишком горячую пищу.</item>
        <item>Орехи замедлят процесс старения организма.</item>
        <item>Стресс вредит вашему здоровью.</item>
        <item>Проводите больше времени на свежем воздухе.</item>
        <item>Ходите пешком, когда это возможно.</item>
        <item>Откажитесь от вредных привычек.</item>
        <item>Проветривание комнаты перед сном поможет заснуть.</item>
        <item>Для полноценного отдыха необходимо 7-8 часов сна.</item>
        <item>Чистота в доме очень важна.</item>
        <item>Витаминные комплексы помогут держаться в тонусе.</item>
        <item>Сладкое может навредить вашим зубам.</item>
        <item>Молочные продукты помогут укрепить кости.</item>
        <item>Старайтесь отключать на ночь электроприборы.</item>
        <item>Человек может продуктивно работать не более 3 часов подряд.</item>
        <item>Длительное воздействие прямых солнечных лучей вредит коже.</item>
        <item>Старайтесь лечь спать до полуночи.</item>
        <item>Старайтесь избегать стрессов.</item>
        <item>Хлеб из муки грубого помола полезнее белого.</item>
        <item>Горький шоколад стимулирует работу мозга.</item>
        <item>Избыточный вес может привести к серьезным проблемам с здоровьем.</item>
        <item>Не кипятите воду дважды.</item>
        <item>Чистите зубы после каждого приема пищи.</item>
    </string-array>
    <string name="angina">Ангина</string>
    <string name="ard">ОРЗ</string>
    <string name="arrhythmia">Аритмия</string>
    <string name="arvi">ОРВИ</string>
    <string name="asthma">Астма</string>
    <string name="caries">Кариес</string>
    <string name="cataract">Катаракта</string>
</resources>