<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeTextView
        android:id="@+id/size_text"
        style="@style/StandartText"
        android:text="@string/text_size"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/share"
        style="@style/StandartButton"
        android:text="@string/share" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/web"
            style="@style/StandartButton"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/web" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/userterms"
            style="@style/StandartButton"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/user_terms"/>

    </LinearLayout>


</LinearLayout>

