<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="be_healthy_license_2014141300.be_healthy.fragment.IMBFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeTextView
            android:id="@+id/textView4"
            style="@style/StandartText"
            android:layout_weight="1"
            android:text="@string/age" />

        <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeTextView
            android:id="@+id/textView3"
            style="@style/StandartText"
            android:layout_weight="1"
            android:text="@string/weight" />

        <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeTextView
            android:id="@+id/textView5"
            style="@style/StandartText"
            android:layout_weight="1"
            android:text="@string/height" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeEditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeEditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeEditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        style="@style/StandartButton"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/start"
        android:text="@string/measure" />

    <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imb_header"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/tiny"
        android:layout_marginBottom="@dimen/tiny"
        android:textColor="@color/colorBlack"/>

    <be_healthy_license_2014141300.be_healthy.view.IMBView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeTextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/fat_grid"
        android:layout_marginTop="@dimen/tiny" />


</LinearLayout>
