<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeTextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:gravity="center"/>

    <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeTextView
        android:id="@+id/symptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/symptoms"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:background="@color/colorPrimary"/>

    <ListView
        android:id="@+id/symptoms_list"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/long_layout"
        android:orientation="vertical">

        <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeTextView
            android:id="@+id/treatment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/treatment"
            android:gravity="center"
            android:onClick="showTreatment"
            android:textColor="@color/colorBlack"
            android:background="@drawable/light_background"/>

        <FrameLayout
            android:id="@+id/t_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </FrameLayout>

        <com.be_healthy_license_2014141300.be_healthy.view.CustomSizeTextView
            android:id="@+id/magic"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/magic"
            android:background="@drawable/light_background"
            android:onClick="showMagic"
            android:textColor="@color/colorBlack"
            android:gravity="center"/>

        <FrameLayout
            android:id="@+id/m_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>

    </LinearLayout>
</LinearLayout>